--- a/Fletnix/Fletnix.csproj
+++ b/Fletnix/Fletnix.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <None Remove="Assets\Avengers.jpg" />
+    <None Remove="Assets\DisLikeIcon.png" />
+    <None Remove="Assets\LikeIcon.png" />
     <None Remove="Assets\The Matrix.jpg" />
   </ItemGroup>
 
@@ -32,5 +34,14 @@
   <ItemGroup>
     <ProjectReference Include="..\Fletnix.Model\Fletnix.Model.csproj" />
     <ProjectReference Include="..\Fletnix.Services\Fletnix.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Assets\DisLikeIcon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\LikeIcon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 </Project>
